--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
     <body>
-
+    <header>
         <h1>Frutas y Verduras</h1>
-
+    </header>
 
         <div id="seleccion">
             <div>
@@ -22,7 +22,7 @@
         </div>
         <div id="holder">
             <div id="board">
-                    <div>
+                    <div class="producto">
                         <div >
                             <img class="imagenProducto" src="./images/manzana.jpg" alt="">
                         </div>
@@ -34,7 +34,7 @@
                             </div>
                     </div>
 
-                    <div>
+                    <div class="producto">
                         <div>
                             <img  class="imagenProducto" src="./images/banana.jpg" alt="">
                         </div>
@@ -46,7 +46,7 @@
                             </div>
                     </div>
 
-                    <div>
+                    <div class="producto">
                         <div>
                             <img class="imagenProducto" src="./images/kiwi.webp" alt="">
                         </div>
@@ -58,7 +58,7 @@
                             </div>
                     </div>
             
-                    <div>
+                    <div class="producto">
                         <div>
                             <img class="imagenProducto" src="./images/pera.webp" alt="">
                         </div>
@@ -70,7 +70,7 @@
                             </div>
                     </div>
 
-                    <div>
+                    <div class="producto">
                         <div>
                             <img  class="imagenProducto" src="./images/frutilla.jpg" alt="">
                         </div>
@@ -82,7 +82,7 @@
                             </div>
                     </div>
 
-                    <div>
+                    <div class="producto">
                         <div>
                             <img  class="imagenProducto" src="./images/naranja.jpg" alt="">
                         </div>
@@ -99,15 +99,20 @@
 
 
         <footer >
-        <div id="resumen"> 
+
                 <div>
                     <p>articulos en el carrito:</p>
+                    <ol>
+                        <li>1</li>
+                        <li>2</li>
+                        <li>3</li>
+                    </ol>
                 </div>
 
                 <div>
-                    <p>Total:</p>
+                    <p>Total: $$$</p>
                 </div>
-            </div>
+      
         </footer>
 
         <script src="products.js"></script>
