--- a/index.html
+++ b/index.html
@@ -103,11 +103,20 @@
 
                 <div>
                     <p class="subTitle">Artículos en el carrito:</p>
-                    <ol>
+                    <ul id="articulosCarrito">
                         <li class="text">1</li>
                         <li class="text">2</li>
                         <li class="text">3</li>
-                    </ol>
+                        <li class="text">1</li>
+                        <li class="text">2</li>
+                        <li class="text">3</li>
+                        <li class="text">1</li>
+                        <li class="text">2</li>
+                        <li class="text">3</li>
+                        <li class="text">1</li>
+                        <li class="text">2</li>
+                        <li class="text">3</li>
+                    </ul>
                 </div>
 
                 <div>
