--- a/index.html
+++ b/index.html
@@ -104,18 +104,7 @@
                 <div>
                     <p class="subTitle">Artículos en el carrito:</p>
                     <ul id="articulosCarrito">
-                        <li class="text">1</li>
-                        <li class="text">2</li>
-                        <li class="text">3</li>
-                        <li class="text">4</li>
-                        <li class="text">5</li>
-                        <li class="text">6</li>
-                        <li class="text">7</li>
-                        <li class="text">8</li>
-                        <li class="text">9</li>
-                        <li class="text">10</li>
-                        <li class="text">11</li>
-                        <li class="text">12</li> 
+                        <li class="text">1</li> <!--ejemplo articulo en carrito-->
                     </ul>
                 </div>
 
