funciones v2 carrito funcionando

--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
 
                 <div>
                     <p class="subTitle">Artículos en el carrito:</p>
-                    <ul id="articulosCarrito">
-                        <li class="text">1</li> <!--ejemplo articulo en carrito-->
-                    </ul>
+                    <ul id="articulosCarrito"><!--Elementos del carrito--></ul>
                 </div>
 
                 <div>
-                    <p class="subTitle">Total: $$$</p>
+                    <p id="total" class="subTitle">TOTAL = $0</p>
                 </div>
       
         </footer>
