funciones v2.5 carrito funcionando

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                     <ul id="articulosCarrito"><!--Elementos del carrito--></ul>
                 </div>
 
-                <div>
+                <div id="footerTotal">
                     <p id="total" class="subTitle">TOTAL = $0</p>
+                    <button id="voucher" class="text">voucher</button>
+                    <button id="finalizarCompra" class="text">Finalizar compra</button>
                 </div>
       
         </footer>
