--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
     <header>
         <h1 class="title">Frutas y Verduras</h1>
+        <button id="resetStock">reset stock</button>
     </header>
 
         <div id="seleccion">
@@ -35,8 +36,8 @@
                 </div>
 
                 <div id="footerTotal">
-                    <p id="total" class="subTitle">TOTAL = $0</p>
-                    <button id="voucher" class="text">voucher</button>
+                    <p id="total" class="subTitle">TOTAL = $0</p> 
+                    <button id="voucher" class="text" style="display: none;">cupón</button><!--Boton a implementar-->
                     <button id="finalizarCompra" class="text">Finalizar compra</button>
                 </div>
       
