--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
     <header>
         <h1 class="title">Frutas y Verduras</h1>
-        <button id="resetStock">reset stock</button>
+        <button id="resetStock">reset</button>
     </header>
 
         <div id="seleccion">
