--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>VERDULERÍA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel&family=Gloria+Hallelujah&family=Macondo&family=Nerko+One&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
     <body>
     <header>
@@ -37,12 +38,13 @@
 
                 <div id="footerTotal">
                     <p id="total" class="subTitle">TOTAL = $0</p> 
-                    <button id="voucher" class="text" style="display: none;">cupón</button><!--Boton a implementar-->
+                    <button id="voucher" class="text">cupón</button><!--Boton a implementar-->
                     <button id="finalizarCompra" class="text">Finalizar compra</button>
                 </div>
       
         </footer>
 
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="products.js"></script>
         <script src="functions.js"></script>
         <script src="events.js"></script>
