--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERDULERÍA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel&family=Gloria+Hallelujah&family=Macondo&family=Nerko+One&family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/icons/cabbage-.png">
     <link rel="stylesheet" href="style.css">
     
 </head>
