--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VERDULERÍA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel&family=Gloria+Hallelujah&family=Macondo&family=Nerko+One&family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/icons/cabbage-.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./public/images/icons/cabbage-.png">
+    <link rel="stylesheet" href="./public/css/style.css">
     
 </head>
     <body class="color-Secondary">
@@ -46,10 +46,10 @@
         </footer>
 
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="products.js"></script>
-        <script src="functions.js"></script>
-        <script src="api.js"></script>
-        <script src="events.js"></script>
+        <script src="./src/components/products.js"></script>
+        <script src="./src/functions.js"></script>
+        <script src="./src/components/api.js"></script>
+        <script src="./src/events.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
